fix: missing space

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -116,6 +116,7 @@ $hero-desktop-height: 446px;
     }
 
     >dd {
+      margin-top: 2rem;
       font-family: 'Lexend Deca';
       font-size: 12rem;
       line-height: 25rem;
